Fix resizing to scale smoothly, to wrap (roughly) the same at all sizes.

--- a/_includes/assets/css/resizing.css
+++ b/_includes/assets/css/resizing.css
@@ -36,23 +36,23 @@
 }
 
 /* Large desktop only - full size columns and empty space */
-@media only screen and (min-width: 1120px) {
+@media only screen and (min-width: 1307px) {
   main, footer {
-    width: 1120px;
+    width: 1307px;
     margin-left: auto;
     margin-right: auto;
   }
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1307px) {
   :root {
     font-size: 20px;
   }
 }
 
-@media only screen and (min-width: 900px) and (max-width:1099px) {
+@media only screen and (min-width: 900px) and (max-width:1307px) {
   :root {
-    font-size: calc(13px + (100vw - 900px) * 7 / 200)
+    font-size: calc(13px + (100vw - 900px) * 7 / 407)
   }
 }
 
